force-app/main/default/objects/Sharepoint_Setting__c/Sharepoint_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Sharepoint Setting</label>
</CustomObject>