force-app/main/default/objects/Sharepoint_Setting__c/fields/drive_id__c.field-meta.xml
<CustomField>
    <fullName>drive_id__c</fullName>
    <label>drive_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>