force-app/main/default/objects/Sharepoint_Setting__c/fields/sharepoint_site__c.field-meta.xml
<CustomField>
    <fullName>sharepoint_site__c</fullName>
    <label>sharepoint_site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>