force-app/main/default/objects/Sharepoint_Setting__c/fields/site_id__c.field-meta.xml
<CustomField>
    <fullName>site_id__c</fullName>
    <label>site_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>