force-app/main/default/objects/Sharepoint_Setting__c/fields/tenant_identifier__c.field-meta.xml
<CustomField>
    <fullName>tenant_identifier__c</fullName>
    <label>tenant_identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>